--- a/components/SSI/DIDxWallet/Withdrawals/styles.module.scss
+++ b/components/SSI/DIDxWallet/Withdrawals/styles.module.scss
@@ -36,9 +36,6 @@
 }
 
 .button {
-  position: absolute !important;
-  right: 0%;
-  bottom: 30px;
   border-radius: 4px;
   border: 0;
   box-shadow: inset 0 0 0 1px #ffffff;
@@ -64,7 +61,5 @@
 }
 
 .gascost {
-  position: absolute !important;
-  bottom: -10%;
-  right: 0;
+  margin-top: 1%;
 }
